--- a/Scorewriter/app/src/main/res/values/strings.xml
+++ b/Scorewriter/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Scorewriter</string>
     <string name="action_add">Add</string>
+    <string name="hint_title">Title</string>
+    <string name="hint_artist">Artist</string>
 </resources>
